<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grasp_planning_engine</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marti.vilella@esa.int">Marti Vilella</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>octomap</build_depend>
  <exec_depend>octomap</exec_depend>
  <depend>rclcpp</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_grasping</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
